--- a/Visual Studio Project/LonghornAirlines/Views/Report/DisplayManifest.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/DisplayManifest.cshtml
@@ -1,4 +1,35 @@
-﻿
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model LonghornAirlines.Models.ViewModels.ManifestViewModel
+@{
+    ViewData["Title"] = "View";
+}
+@section imageContent
+{
+    <h1>Report</h1>
+
+    <h4>
+        @*From @ViewBag.CityFromName To @ViewBag.CityToName*@
+        @*From @ViewBag.DepartDate To @ViewBag.ArriveDate*@
+    </h4>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Total Seats Sold
+                </th>
+                <th>
+                    Total Revenue
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    @ViewBag.PassengerCount
+                </td>
+                <td>
+                    @ViewBag.Revenue
+                </td>
+            </tr>
+        </tbody>
+    </table>
+}
