--- a/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/EmployeeViews/EmployeeIndex.cshtml
@@ -5,7 +5,7 @@
 {
     <h1>Welcome to the Employee Home Page</h1>
     <a class="btn btn-primary" asp-action="bookForCust" asp-controller="Home">Create Customer Booking</a>
-    <a class="btn btn-primary">Manage Reservations</a>
+    <a class="btn btn-primary" asp-action="Index" asp-controller="Reservation">Manage Reservations</a>
     <a class="btn btn-primary" asp-action="Index" asp-controller="FlightInfos">Manage Flights</a>
     <a class="btn btn-primary">Gate Agent Functions</a>
     <a class="btn btn-primary" asp-action="Index" asp-controller="RoleAdmin">Manage Roles</a>
