--- a/Visual Studio Project/LonghornAirlines/Views/Report/FlightManifest.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/FlightManifest.cshtml
@@ -4,7 +4,7 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="DisplayReport" method="post">
+            <form asp-action="ManifestSearchResults" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label class="control-label">Departing City</label>
@@ -33,7 +33,7 @@
                     <span style="display:inline-block; width:20px;"></span><label class="form-check-label"><input class="form-check-input" type="checkbox" asp-for="hasNotDeparted" />@Html.DisplayNameFor(model => model.hasNotDeparted)    </label>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create Report" class="btn btn-primary" />
+                    <input type="submit" value="Create Flight Manifest" class="btn btn-primary" />
                 </div>
             </form>
         </div>
