--- a/Visual Studio Project/LonghornAirlines/Views/Reservation/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Reservation/Index.cshtml
@@ -31,6 +31,7 @@
             <th>
                 Order Total
             </th>
+            <th>Is Confirmed</th>
             <th></th>
         </tr>
     </thead>
@@ -54,7 +55,9 @@
                 @Html.DisplayFor(modelItem => item.ReservationTotal)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.ReservationID">Details</a>
+            </td>
+            <td>
+                <a asp-action="Description" asp-route-id="@item.ReservationID">Details</a>
             </td>
         </tr>
         }
