--- a/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Shared/_Layout.cshtml
@@ -33,10 +33,10 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item mr-md-3">
-                    Booking
+                    <a asp-action="Index" asp-controller="Home">Booking</a>
                 </li>
                 <li class="nav-item mr-md-3">
-                    Reservations
+                    <a asp-action="Index" asp-controller="Reservation">Reservations</a>
                 </li>
                 @if (User.Identity.IsAuthenticated && User.IsInRole("Manager"))
                 {
