Changes to Reporting

--- a/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Home/Index.cshtml
@@ -77,7 +77,7 @@
             </div> 
         </div>
         <div class="col-md-3 d-none d-lg-block">
-            <img class="img-fluid w-100" src="~/static/ad_beta.jpg" style="height:75vh;">
+            <img class="img-fluid w-100" src="~/static/UT_Flight_Ad.png" style="height:75vh;">
         </div>
     </div>
 }
