--- a/Visual Studio Project/LonghornAirlines/Views/Report/GenerateReport.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/GenerateReport.cshtml
@@ -33,6 +33,12 @@
                     <span style="display:inline-block; width:20px;"></span><label class="form-check-label"><input class="form-check-input" type="checkbox" asp-for="FirstClass" />@Html.DisplayNameFor(model => model.FirstClass)    </label>
                 </div>
                 <div class="form-group">
+                    <span style="display:inline-block; width:20px;"></span><label class="form-check-label"><input class="form-check-input" type="checkbox" asp-for="TotalSeatsSold" />@Html.DisplayNameFor(model => model.TotalSeatsSold)    </label>
+                </div>
+                <div class="form-group">
+                    <span style="display:inline-block; width:20px;"></span><label class="form-check-label"><input class="form-check-input" type="checkbox" asp-for="TotalRevenue" />@Html.DisplayNameFor(model => model.TotalRevenue)    </label>
+                </div>
+                <div class="form-group">
                     <input type="submit" value="Create Report" class="btn btn-primary" />
                 </div>
             </form>
