--- a/Visual Studio Project/LonghornAirlines/Views/Report/FlightManifest.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/FlightManifest.cshtml
@@ -8,13 +8,13 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label class="control-label">Departing City</label>
-                    @Html.ListBox("DepartCityID", (MultiSelectList)ViewBag.AllCities, new { @class = "form-control" })
+                    @Html.DropDownList("DepartCityID", (SelectList)ViewBag.AllCities, new { @class = "form-control" })
                     <span asp-validation-for="DepartCityID" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label">Arriving City</label>
-                    @Html.ListBox("DepartCityID", (MultiSelectList)ViewBag.AllCities, new { @class = "form-control" })
-                    <span asp-validation-for="DepartCityID" class="text-danger"></span>
+                    @Html.DropDownList("ArriveCityID", (SelectList)ViewBag.AllCities, new { @class = "form-control" })
+                    <span asp-validation-for="ArriveCityID" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="DepartDate" class="control-label"></label>
