--- a/Visual Studio Project/LonghornAirlines/Views/Report/FlightManifest.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/FlightManifest.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LonghornAirlines.Models.ViewModels.ManifestViewModel
 @section ImageContent{
-    <h1>Generate Report</h1>
+    <h1>Create Manifest</h1>
     <hr />
     <div class="row">
         <div class="col-md-4">
