--- a/Visual Studio Project/LonghornAirlines/Views/Reservation/Index.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Reservation/Index.cshtml
@@ -79,6 +79,10 @@
             </td>
             <td>
                 <a asp-action="Description" asp-route-id="@item.ReservationID">Details</a>
+                @if (User.IsInRole("Manager"))
+                {
+                    <a asp-action="ChangeTicketPrices" asp-route-ReservavtionId="@item.ReservationID">Change Prices</a>
+                }
             </td>
         </tr>
         }
