--- a/Visual Studio Project/LonghornAirlines/Views/Flights/CheckIn.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Flights/CheckIn.cshtml
@@ -22,7 +22,17 @@
                 {
                     @if (Model.PilotCheckIn == false)
                     {
-                        @Html.DisplayFor(model => model.Pilot.FullName) <button class="btn btn-primary" asp-action="CheckInSpecial" asp-route-id=@Model.FlightID asp-route-person="Pilot">Check In</button>
+                        @Html.DisplayFor(model => model.Pilot
+                   
+                   
+                   
+                   
+                   
+                   
+                   
+                   
+                   
+                   ) <button class="btn btn-primary" asp-action="CheckInSpecial" asp-route-id=@Model.FlightID asp-route-person="Pilot">Check In</button>
                     }
                     else
                     {
