--- a/Visual Studio Project/LonghornAirlines/Views/Flights/Details.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Flights/Details.cshtml
@@ -8,7 +8,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Flight</h4>
+    <h4>FlightInfo Number: @Model.FlightInfo.FlightNumber Flight Instance (FlightID): @Model.FlightID</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -27,19 +27,19 @@
             @Html.DisplayNameFor(model => model.Pilot)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Pilot)
+            @Html.DisplayFor(model => model.Pilot.FullName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CoPilot)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CoPilot)
+            @Html.DisplayFor(model => model.CoPilot.FullName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Attendant)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Attendant)
+            @Html.DisplayFor(model => model.Attendant.FullName)
         </dd>
         <dt class="col-sm-2"></dt>
     </dl>
