Flight Details View

--- a/Visual Studio Project/LonghornAirlines/Views/Flights/Details.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Flights/Details.cshtml
@@ -50,18 +50,21 @@
         <th>Ticket No</th>
         <th>Ticket Holder</th>
         <th>Flight Number</th>
+        <th>Flight Date</th>
+        <th>Flight Time</th>
         <th>Seat Selection</th>
     </tr>
     <tbody>
         @foreach (Ticket t in Model.Tickets)
         {
-            <tr>
-                <td>@t.TicketID</td>
-                <td>@t.Customer.NormalizedUserName</td>
-                <td>@t.Flight.FlightInfo.FlightNumber</td>
-                <td>@t.Flight.Date</td>
-                <td>@t.Flight.FlightInfo.FlightTime</td>
-            </tr>
+        <tr>
+            <td>@t.TicketID</td>
+            <td>@t.Customer.NormalizedUserName</td>
+            <td>@t.Flight.FlightInfo.FlightNumber</td>
+            <td>@t.Flight.Date</td>
+            <td>@t.Flight.FlightInfo.FlightTime</td>
+            <td>@t.Seat</td>
+        </tr>
         }
     </tbody>
 </table>
