--- a/Visual Studio Project/LonghornAirlines/Views/Report/DisplayManifest.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/DisplayManifest.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LonghornAirlines.Models.Business.Flight
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Manifest";
 }
 @section imageContent
 {
@@ -26,19 +26,19 @@
                 @Html.DisplayNameFor(model => model.Pilot)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Pilot)
+                @Html.DisplayFor(model => model.Pilot.FullName)
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.CoPilot)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.CoPilot)
+                @Html.DisplayFor(model => model.CoPilot.FullName)
             </dd>
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.Attendant)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Attendant)
+                @Html.DisplayFor(model => model.Attendant.FullName)
             </dd>
             <dt class="col-sm-2"></dt>
         </dl>
