Update DisplayManifest View

--- a/Visual Studio Project/LonghornAirlines/Views/Report/DisplayManifest.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/DisplayManifest.cshtml
@@ -49,6 +49,8 @@
             <th>Ticket No</th>
             <th>Ticket Holder</th>
             <th>Flight Number</th>
+            <th>Flight Date</th>
+            <th>Flight Time</th>
             <th>Seat Selection</th>
         </tr>
         <tbody>
@@ -60,6 +62,7 @@
                     <td>@t.Flight.FlightInfo.FlightNumber</td>
                     <td>@t.Flight.Date</td>
                     <td>@t.Flight.FlightInfo.FlightTime</td>
+                    <td>@t.Seat</td>
                 </tr>
             }
         </tbody>
