--- a/Visual Studio Project/LonghornAirlines/Views/Report/DisplayReport.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/DisplayReport.cshtml
@@ -1,9 +1,9 @@
 ﻿@model LonghornAirlines.Models.ViewModels.ReportsViewModel
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewData["Title"] = "View";
 }
-@section imageContent
-{
+
     <h1>Report</h1>
 
     <h4>
@@ -44,4 +44,3 @@
             </tr>
         </tbody>
     </table>
-}
