--- a/Visual Studio Project/LonghornAirlines/Views/Report/FlightManifest.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/FlightManifest.cshtml
@@ -1,7 +1,8 @@
 ﻿@model LonghornAirlines.Models.ViewModels.ManifestViewModel
 @section ImageContent{
-    <h1>Create Manifest</h1>
+    <h1>Search for Flight Manifest</h1>
     <hr />
+    <h3>Enter the Criteria of the Flight Manifest You're trying to Locate. </h3>
     <div class="row">
         <div class="col-md-4">
             <form asp-action="ManifestSearchResults" method="post">
