--- a/Visual Studio Project/LonghornAirlines/Views/Report/GenerateReport.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/GenerateReport.cshtml
@@ -1,6 +1,7 @@
 ﻿@model LonghornAirlines.Models.ViewModels.ReportsViewModel
 @section ImageContent{
     <h1>Generate Report</h1>
+    <h4>Select the criteria for your report: </h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
