--- a/Visual Studio Project/LonghornAirlines/Views/Report/ManifestSearchResults.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/ManifestSearchResults.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<LonghornAirlines.Models.Business.Flight>
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewData["Title"] = "View";
 }
-@section imageContent
-{
+
     <h1>Report</h1>
 
     <h4>
@@ -36,4 +36,3 @@
 }
         </tbody>
     </table>
-}
