--- a/Visual Studio Project/LonghornAirlines/Views/Tickets/Edit.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Tickets/Edit.cshtml
@@ -24,7 +24,7 @@
 
                         <a asp-action="TicketCustomerSearch" asp-controller="Search" asp-route-TicketID="@Model.TicketID">Find existing customer</a>
                         <br />
-                        <a asp-action="CustomerCreateAccount" asp-controller="Search" asp-route-TicketID="@Model.TicketID">Set up new customer</a>
+                        <a asp-action="CustomerCreateAccount" asp-controller="Tickets" asp-route-TicketID="@Model.TicketID">Set up new customer</a>
                     </div>
                 </div>
             </div>
