--- a/Visual Studio Project/LonghornAirlines/Views/Report/ManifestSearchResults.cshtml
+++ b/Visual Studio Project/LonghornAirlines/Views/Report/ManifestSearchResults.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<LonghornAirlines.Models.Business.Flight>
 @{
     Layout = "~/Views/Shared/_Layout2.cshtml";
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "ManifestSearchResults";
 }
 
     <h1>Report</h1>
